tests/format/misc/errors/js/import-assertions/invalid-ts-type-import-2.mts
import module type foo from "./module.wasm";
